--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Live in Vienna</li>
             <li>Coffee lover</li>
         </ul>
-        <p>Please connect with me on <a href="linkedin.com">Linkedin here</a>
+        <p>Please connect with me on <a href="https://www.linkedin.com/in/thomas-gersch-64b785158/">Linkedin here</a>
         <input type="email" placeholder="Enter email...">
         <button>Join newsletter</button>
     </body>
