--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Fun facts about me</h2>
         <ul>
             <li>32 years old</li>
-            <li>Live in Vienna</li>
+            <li>Living in Vienna</li>
             <li>Coffee lover</li>
         </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/thomas-gersch-64b785158/" target="_blank">Linkedin here</a>
